# hargassner

./: ARCHITECTURE.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/hargassner/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/hargassner/translations/: en.json
payloads/: widgets.json
tests/components/hargassner/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_sensor.py
