[project]
name = "hargassner-ha"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "homeassistant",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component>=0.13.195",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
